--- a/404.html
+++ b/404.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it-IT" lang="it-IT">
+
 <head>
       <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-      <title>Thank you!</title>
-      <link rel="STYLESHEET" type="text/css" href="style/fg_membersite.css">
+      <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'/>
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <title>Page not found!</title>
+      <link rel="stylesheet" href="/style/bootstrap.min.css"/>
 </head>
+
 <body>
-<div id='fg_membersite_content'>
 <h2>404 - Page not found!</h2>
-I am sorry but the page you looking for does not exist.
-</div>
+<h4>I am sorry but the page you looking for does not exist.</h4>
+
 </body>
 </html>
